
2016-02-09  James Youngman  <jay@gnu.org>

	* src/sf-prs.cc (print_seq_list): Use a range-based for loop for
	iterating over sequence numbers.
	* src/sf-val.cc (validate_seq_lists): Factor out the repeated
	logic into a local function, validate_seq_numbers.
	* src/sf-get2.cc (get): Use a range-based for loop for iterating
	over the comments.

2016-02-08  James Youngman  <jay@gnu.org>

	Support and used range-based for for release_list instances.
	* src/rl-merge.cc (merge): Use a range-based for loop to iterate
	over release_list instances.
	(remove): Likewise.
	* src/rel_list.h (release_list): Implement begin() and end() and
	empty().

	Use a range-based for loop for iterating over deltas.
	* src/sf-get.cc (prepare_seqstate_1): Use a range-based for loop
	for iterating over included/excluded/ignored deltas.

	sccs_delta: Use empty() to find out if a mylist is empty.
	* src/delta.h: use mylist<T>.empty() instead of .length() == 0.

	Implement mylist<T>::push_back.
	* src/mylist.h (mylist): Implement a push_back method and add TODO
	comments for methods which aren't shared by std::vector.

	State that a C++11 compiler is needed.
	* README: Mention the need for a C++11 capable compiler.
	* NEWS: Likewise.

	Store MRs as std::vector<std::string> (not mylist<std::string>).
	* unit-tests/test_bigfile.cc: (emit_comments_or_mrs): Convert to a
	template so that we can use it to print a std::vector<std::string>
	or a mylist<std::string>.
	(emit_delta): Pass MRs as a vector not a mylist.
	(make_delta): Likewise.
	* unit-tests/test_delta-table.cc: Update to take account of the
	change in representation of MR lists from mylist<std::string> to
	std::vector<std::string>.
	* unit-tests/test_delta.cc: Likewise.
	* src/sf-write.cc (write_delta): Change the way we loop over the
	MRs and the comments to use a range-based for loop (hence
	accomodating the change in type of the MR list.
	* src/sf-prt.cc (print_string_list): Convert this function to a